ws모듈로 웹소켓 사용하기 예제

--- a/.gitignore
+++ b/.gitignore
@@ -15094,3 +15094,21 @@ gif-chat/node_modules/vary/HISTORY.md
 gif-chat/node_modules/vary/LICENSE
 gif-chat/node_modules/vary/package.json
 gif-chat/node_modules/vary/README.md
+gif-chat/node_modules/ws/browser.js
+gif-chat/node_modules/ws/LICENSE
+gif-chat/node_modules/ws/package.json
+gif-chat/node_modules/ws/README.md
+gif-chat/node_modules/ws/wrapper.mjs
+gif-chat/node_modules/ws/lib/buffer-util.js
+gif-chat/node_modules/ws/lib/constants.js
+gif-chat/node_modules/ws/lib/event-target.js
+gif-chat/node_modules/ws/lib/extension.js
+gif-chat/node_modules/ws/lib/limiter.js
+gif-chat/node_modules/ws/lib/permessage-deflate.js
+gif-chat/node_modules/ws/lib/receiver.js
+gif-chat/node_modules/ws/lib/sender.js
+gif-chat/node_modules/ws/lib/stream.js
+gif-chat/node_modules/ws/lib/subprotocol.js
+gif-chat/node_modules/ws/lib/validation.js
+gif-chat/node_modules/ws/lib/websocket-server.js
+gif-chat/node_modules/ws/lib/websocket.js
