--- a/gif-chat/package.json
+++ b/gif-chat/package.json
@@ -15,7 +15,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
-    "nunjucks": "^3.2.1"
+    "nunjucks": "^3.2.1",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
