실시간 GIF 채팅방 만들기

--- a/.gitignore
+++ b/.gitignore
@@ -15112,3 +15112,286 @@ gif-chat/node_modules/ws/lib/subprotocol.js
 gif-chat/node_modules/ws/lib/validation.js
 gif-chat/node_modules/ws/lib/websocket-server.js
 gif-chat/node_modules/ws/lib/websocket.js
+gif-chat/node_modules/after/.npmignore
+gif-chat/node_modules/after/.travis.yml
+gif-chat/node_modules/after/LICENCE
+gif-chat/node_modules/after/package.json
+gif-chat/node_modules/after/README.md
+gif-chat/node_modules/after/test/after-test.js
+gif-chat/node_modules/arraybuffer.slice/.npmignore
+gif-chat/node_modules/arraybuffer.slice/LICENCE
+gif-chat/node_modules/arraybuffer.slice/Makefile
+gif-chat/node_modules/arraybuffer.slice/package.json
+gif-chat/node_modules/arraybuffer.slice/README.md
+gif-chat/node_modules/arraybuffer.slice/test/slice-buffer.js
+gif-chat/node_modules/backo2/.npmignore
+gif-chat/node_modules/backo2/component.json
+gif-chat/node_modules/backo2/History.md
+gif-chat/node_modules/backo2/Makefile
+gif-chat/node_modules/backo2/package.json
+gif-chat/node_modules/backo2/Readme.md
+gif-chat/node_modules/base64-arraybuffer/.npmignore
+gif-chat/node_modules/base64-arraybuffer/.travis.yml
+gif-chat/node_modules/base64-arraybuffer/LICENSE-MIT
+gif-chat/node_modules/base64-arraybuffer/package.json
+gif-chat/node_modules/base64-arraybuffer/README.md
+gif-chat/node_modules/base64-arraybuffer/lib/base64-arraybuffer.js
+gif-chat/node_modules/base64id/CHANGELOG.md
+gif-chat/node_modules/base64id/LICENSE
+gif-chat/node_modules/base64id/package.json
+gif-chat/node_modules/base64id/README.md
+gif-chat/node_modules/base64id/lib/base64id.js
+gif-chat/node_modules/blob/.zuul.yml
+gif-chat/node_modules/blob/component.json
+gif-chat/node_modules/blob/LICENSE
+gif-chat/node_modules/blob/Makefile
+gif-chat/node_modules/blob/package.json
+gif-chat/node_modules/blob/README.md
+gif-chat/node_modules/blob/.idea/blob.iml
+gif-chat/node_modules/blob/.idea/markdown-navigator.xml
+gif-chat/node_modules/blob/.idea/modules.xml
+gif-chat/node_modules/blob/.idea/vcs.xml
+gif-chat/node_modules/blob/.idea/workspace.xml
+gif-chat/node_modules/blob/.idea/inspectionProfiles/profiles_settings.xml
+gif-chat/node_modules/blob/.idea/markdown-navigator/profiles_settings.xml
+gif-chat/node_modules/component-bind/.npmignore
+gif-chat/node_modules/component-bind/component.json
+gif-chat/node_modules/component-bind/History.md
+gif-chat/node_modules/component-bind/Makefile
+gif-chat/node_modules/component-bind/package.json
+gif-chat/node_modules/component-bind/Readme.md
+gif-chat/node_modules/component-emitter/History.md
+gif-chat/node_modules/component-emitter/LICENSE
+gif-chat/node_modules/component-emitter/package.json
+gif-chat/node_modules/component-emitter/Readme.md
+gif-chat/node_modules/component-inherit/.npmignore
+gif-chat/node_modules/component-inherit/component.json
+gif-chat/node_modules/component-inherit/History.md
+gif-chat/node_modules/component-inherit/Makefile
+gif-chat/node_modules/component-inherit/package.json
+gif-chat/node_modules/component-inherit/Readme.md
+gif-chat/node_modules/component-inherit/test/inherit.js
+gif-chat/node_modules/engine.io/LICENSE
+gif-chat/node_modules/engine.io/package.json
+gif-chat/node_modules/engine.io/README.md
+gif-chat/node_modules/engine.io/lib/engine.io.js
+gif-chat/node_modules/engine.io/lib/server.js
+gif-chat/node_modules/engine.io/lib/socket.js
+gif-chat/node_modules/engine.io/lib/transport.js
+gif-chat/node_modules/engine.io/lib/transports/polling-jsonp.js
+gif-chat/node_modules/engine.io/lib/transports/polling-xhr.js
+gif-chat/node_modules/engine.io/lib/transports/polling.js
+gif-chat/node_modules/engine.io/lib/transports/websocket.js
+gif-chat/node_modules/engine.io/node_modules/debug/CHANGELOG.md
+gif-chat/node_modules/engine.io/node_modules/debug/LICENSE
+gif-chat/node_modules/engine.io/node_modules/debug/package.json
+gif-chat/node_modules/engine.io/node_modules/debug/README.md
+gif-chat/node_modules/engine.io/node_modules/debug/dist/debug.js
+gif-chat/node_modules/engine.io/node_modules/debug/src/browser.js
+gif-chat/node_modules/engine.io/node_modules/debug/src/common.js
+gif-chat/node_modules/engine.io/node_modules/debug/src/node.js
+gif-chat/node_modules/engine.io/node_modules/ms/license.md
+gif-chat/node_modules/engine.io/node_modules/ms/package.json
+gif-chat/node_modules/engine.io/node_modules/ms/readme.md
+gif-chat/node_modules/engine.io/node_modules/ws/browser.js
+gif-chat/node_modules/engine.io/node_modules/ws/LICENSE
+gif-chat/node_modules/engine.io/node_modules/ws/package.json
+gif-chat/node_modules/engine.io/node_modules/ws/README.md
+gif-chat/node_modules/engine.io/node_modules/ws/lib/buffer-util.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/constants.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/event-target.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/extension.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/limiter.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/permessage-deflate.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/receiver.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/sender.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/stream.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/validation.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/websocket-server.js
+gif-chat/node_modules/engine.io/node_modules/ws/lib/websocket.js
+gif-chat/node_modules/engine.io-client/CHANGELOG.md
+gif-chat/node_modules/engine.io-client/engine.io.js
+gif-chat/node_modules/engine.io-client/LICENSE
+gif-chat/node_modules/engine.io-client/package.json
+gif-chat/node_modules/engine.io-client/README.md
+gif-chat/node_modules/engine.io-client/lib/globalThis.browser.js
+gif-chat/node_modules/engine.io-client/lib/globalThis.js
+gif-chat/node_modules/engine.io-client/lib/socket.js
+gif-chat/node_modules/engine.io-client/lib/transport.js
+gif-chat/node_modules/engine.io-client/lib/transports/polling-jsonp.js
+gif-chat/node_modules/engine.io-client/lib/transports/polling-xhr.js
+gif-chat/node_modules/engine.io-client/lib/transports/polling.js
+gif-chat/node_modules/engine.io-client/lib/transports/websocket.js
+gif-chat/node_modules/engine.io-client/lib/transports/xmlhttprequest.browser.js
+gif-chat/node_modules/engine.io-client/lib/transports/xmlhttprequest.js
+gif-chat/node_modules/engine.io-client/node_modules/debug/.coveralls.yml
+gif-chat/node_modules/engine.io-client/node_modules/debug/.eslintrc
+gif-chat/node_modules/engine.io-client/node_modules/debug/.npmignore
+gif-chat/node_modules/engine.io-client/node_modules/debug/.travis.yml
+gif-chat/node_modules/engine.io-client/node_modules/debug/CHANGELOG.md
+gif-chat/node_modules/engine.io-client/node_modules/debug/karma.conf.js
+gif-chat/node_modules/engine.io-client/node_modules/debug/LICENSE
+gif-chat/node_modules/engine.io-client/node_modules/debug/Makefile
+gif-chat/node_modules/engine.io-client/node_modules/debug/node.js
+gif-chat/node_modules/engine.io-client/node_modules/debug/package.json
+gif-chat/node_modules/engine.io-client/node_modules/debug/README.md
+gif-chat/node_modules/engine.io-client/node_modules/debug/src/browser.js
+gif-chat/node_modules/engine.io-client/node_modules/debug/src/debug.js
+gif-chat/node_modules/engine.io-client/node_modules/debug/src/node.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/browser.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/LICENSE
+gif-chat/node_modules/engine.io-client/node_modules/ws/package.json
+gif-chat/node_modules/engine.io-client/node_modules/ws/README.md
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/buffer-util.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/constants.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/event-target.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/extension.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/limiter.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/permessage-deflate.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/receiver.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/sender.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/stream.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/validation.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/websocket-server.js
+gif-chat/node_modules/engine.io-client/node_modules/ws/lib/websocket.js
+gif-chat/node_modules/engine.io-parser/CHANGELOG.md
+gif-chat/node_modules/engine.io-parser/LICENSE
+gif-chat/node_modules/engine.io-parser/package.json
+gif-chat/node_modules/engine.io-parser/Readme.md
+gif-chat/node_modules/engine.io-parser/lib/browser.js
+gif-chat/node_modules/engine.io-parser/lib/keys.js
+gif-chat/node_modules/engine.io-parser/lib/utf8.js
+gif-chat/node_modules/has-binary2/History.md
+gif-chat/node_modules/has-binary2/LICENSE
+gif-chat/node_modules/has-binary2/package.json
+gif-chat/node_modules/has-binary2/README.md
+gif-chat/node_modules/has-cors/.npmignore
+gif-chat/node_modules/has-cors/component.json
+gif-chat/node_modules/has-cors/History.md
+gif-chat/node_modules/has-cors/Makefile
+gif-chat/node_modules/has-cors/package.json
+gif-chat/node_modules/has-cors/Readme.md
+gif-chat/node_modules/has-cors/test.js
+gif-chat/node_modules/indexof/.npmignore
+gif-chat/node_modules/indexof/component.json
+gif-chat/node_modules/indexof/Makefile
+gif-chat/node_modules/indexof/package.json
+gif-chat/node_modules/indexof/Readme.md
+gif-chat/node_modules/isarray/package.json
+gif-chat/node_modules/isarray/README.md
+gif-chat/node_modules/parseqs/LICENSE
+gif-chat/node_modules/parseqs/Makefile
+gif-chat/node_modules/parseqs/package.json
+gif-chat/node_modules/parseqs/README.md
+gif-chat/node_modules/parseqs/test.js
+gif-chat/node_modules/parseuri/History.md
+gif-chat/node_modules/parseuri/LICENSE
+gif-chat/node_modules/parseuri/Makefile
+gif-chat/node_modules/parseuri/package.json
+gif-chat/node_modules/parseuri/README.md
+gif-chat/node_modules/parseuri/test.js
+gif-chat/node_modules/socket.io/CHANGELOG.md
+gif-chat/node_modules/socket.io/LICENSE
+gif-chat/node_modules/socket.io/package.json
+gif-chat/node_modules/socket.io/Readme.md
+gif-chat/node_modules/socket.io/lib/client.js
+gif-chat/node_modules/socket.io/lib/namespace.js
+gif-chat/node_modules/socket.io/lib/parent-namespace.js
+gif-chat/node_modules/socket.io/lib/socket.js
+gif-chat/node_modules/socket.io/node_modules/debug/CHANGELOG.md
+gif-chat/node_modules/socket.io/node_modules/debug/LICENSE
+gif-chat/node_modules/socket.io/node_modules/debug/package.json
+gif-chat/node_modules/socket.io/node_modules/debug/README.md
+gif-chat/node_modules/socket.io/node_modules/debug/dist/debug.js
+gif-chat/node_modules/socket.io/node_modules/debug/src/browser.js
+gif-chat/node_modules/socket.io/node_modules/debug/src/common.js
+gif-chat/node_modules/socket.io/node_modules/debug/src/node.js
+gif-chat/node_modules/socket.io/node_modules/ms/license.md
+gif-chat/node_modules/socket.io/node_modules/ms/package.json
+gif-chat/node_modules/socket.io/node_modules/ms/readme.md
+gif-chat/node_modules/socket.io-adapter/LICENSE
+gif-chat/node_modules/socket.io-adapter/package.json
+gif-chat/node_modules/socket.io-adapter/Readme.md
+gif-chat/node_modules/socket.io-adapter/.idea/$CACHE_FILE$
+gif-chat/node_modules/socket.io-adapter/.idea/misc.xml
+gif-chat/node_modules/socket.io-adapter/.idea/modules.xml
+gif-chat/node_modules/socket.io-adapter/.idea/socket.io-adapter.iml
+gif-chat/node_modules/socket.io-adapter/.idea/vcs.xml
+gif-chat/node_modules/socket.io-adapter/.idea/workspace.xml
+gif-chat/node_modules/socket.io-adapter/.idea/inspectionProfiles/profiles_settings.xml
+gif-chat/node_modules/socket.io-client/CHANGELOG.md
+gif-chat/node_modules/socket.io-client/LICENSE
+gif-chat/node_modules/socket.io-client/package.json
+gif-chat/node_modules/socket.io-client/README.md
+gif-chat/node_modules/socket.io-client/dist/socket.io.dev.js
+gif-chat/node_modules/socket.io-client/dist/socket.io.dev.js.map
+gif-chat/node_modules/socket.io-client/dist/socket.io.js
+gif-chat/node_modules/socket.io-client/dist/socket.io.js.map
+gif-chat/node_modules/socket.io-client/dist/socket.io.slim.dev.js
+gif-chat/node_modules/socket.io-client/dist/socket.io.slim.dev.js.map
+gif-chat/node_modules/socket.io-client/dist/socket.io.slim.js
+gif-chat/node_modules/socket.io-client/dist/socket.io.slim.js.map
+gif-chat/node_modules/socket.io-client/lib/manager.js
+gif-chat/node_modules/socket.io-client/lib/on.js
+gif-chat/node_modules/socket.io-client/lib/socket.js
+gif-chat/node_modules/socket.io-client/lib/url.js
+gif-chat/node_modules/socket.io-client/node_modules/debug/.coveralls.yml
+gif-chat/node_modules/socket.io-client/node_modules/debug/.eslintrc
+gif-chat/node_modules/socket.io-client/node_modules/debug/.npmignore
+gif-chat/node_modules/socket.io-client/node_modules/debug/.travis.yml
+gif-chat/node_modules/socket.io-client/node_modules/debug/CHANGELOG.md
+gif-chat/node_modules/socket.io-client/node_modules/debug/karma.conf.js
+gif-chat/node_modules/socket.io-client/node_modules/debug/LICENSE
+gif-chat/node_modules/socket.io-client/node_modules/debug/Makefile
+gif-chat/node_modules/socket.io-client/node_modules/debug/node.js
+gif-chat/node_modules/socket.io-client/node_modules/debug/package.json
+gif-chat/node_modules/socket.io-client/node_modules/debug/README.md
+gif-chat/node_modules/socket.io-client/node_modules/debug/src/browser.js
+gif-chat/node_modules/socket.io-client/node_modules/debug/src/debug.js
+gif-chat/node_modules/socket.io-client/node_modules/debug/src/node.js
+gif-chat/node_modules/socket.io-client/node_modules/socket.io-parser/binary.js
+gif-chat/node_modules/socket.io-client/node_modules/socket.io-parser/is-buffer.js
+gif-chat/node_modules/socket.io-client/node_modules/socket.io-parser/LICENSE
+gif-chat/node_modules/socket.io-client/node_modules/socket.io-parser/package.json
+gif-chat/node_modules/socket.io-client/node_modules/socket.io-parser/Readme.md
+gif-chat/node_modules/socket.io-parser/binary.js
+gif-chat/node_modules/socket.io-parser/is-buffer.js
+gif-chat/node_modules/socket.io-parser/LICENSE
+gif-chat/node_modules/socket.io-parser/package.json
+gif-chat/node_modules/socket.io-parser/Readme.md
+gif-chat/node_modules/socket.io-parser/node_modules/component-emitter/History.md
+gif-chat/node_modules/socket.io-parser/node_modules/component-emitter/LICENSE
+gif-chat/node_modules/socket.io-parser/node_modules/component-emitter/package.json
+gif-chat/node_modules/socket.io-parser/node_modules/component-emitter/Readme.md
+gif-chat/node_modules/socket.io-parser/node_modules/debug/CHANGELOG.md
+gif-chat/node_modules/socket.io-parser/node_modules/debug/LICENSE
+gif-chat/node_modules/socket.io-parser/node_modules/debug/package.json
+gif-chat/node_modules/socket.io-parser/node_modules/debug/README.md
+gif-chat/node_modules/socket.io-parser/node_modules/debug/dist/debug.js
+gif-chat/node_modules/socket.io-parser/node_modules/debug/src/browser.js
+gif-chat/node_modules/socket.io-parser/node_modules/debug/src/common.js
+gif-chat/node_modules/socket.io-parser/node_modules/debug/src/node.js
+gif-chat/node_modules/socket.io-parser/node_modules/ms/license.md
+gif-chat/node_modules/socket.io-parser/node_modules/ms/package.json
+gif-chat/node_modules/socket.io-parser/node_modules/ms/readme.md
+gif-chat/node_modules/to-array/.npmignore
+gif-chat/node_modules/to-array/LICENCE
+gif-chat/node_modules/to-array/package.json
+gif-chat/node_modules/to-array/README.md
+gif-chat/node_modules/xmlhttprequest-ssl/autotest.watchr
+gif-chat/node_modules/xmlhttprequest-ssl/LICENSE
+gif-chat/node_modules/xmlhttprequest-ssl/package.json
+gif-chat/node_modules/xmlhttprequest-ssl/README.md
+gif-chat/node_modules/xmlhttprequest-ssl/example/demo.js
+gif-chat/node_modules/xmlhttprequest-ssl/lib/XMLHttpRequest.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-constants.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-events.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-exceptions.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-headers.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-redirect-302.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-redirect-303.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-redirect-307.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-request-methods.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/test-request-protocols.js
+gif-chat/node_modules/xmlhttprequest-ssl/tests/testdata.txt
+gif-chat/node_modules/yeast/LICENSE
