--- a/gif-chat/package.json
+++ b/gif-chat/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.1",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.1",
+    "socket.io": "^2.5.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
